# routerbench-mini

./: .gitignore  CITATION.cff  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
configs/: costs.yaml  models.mock.yaml  models.qwen_api.example.yaml  models.qwen_api.yaml  models.qwen_v5.yaml  v5_large_scale.yaml
data/: manifest.jsonl  mini_manifest.jsonl  test.jsonl  v3_test.jsonl  v4_test.jsonl  validation.jsonl
data/v5_large/: data_report.json  manifest_hashes.json  overlap_report.json
docs/: ablation_plan.zh-CN.md  literature_review.md  research_note.md  supervisor_review.zh-CN.md  v5_large_scale_audit.zh-CN.md  v5_large_scale_report.zh-CN.md
results/qwen3.5-confirmatory/: pooled_frozen_summary.csv  pooled_paired_comparisons.csv  replication_summary.csv
results/qwen3.5-study/: error_analysis.md  study_metadata.json  test_summary.csv  test_summary_by_category.csv  validation_summary.csv  validation_thresholds.csv
results/qwen3.5-v2-ablation/: reflection_calibrated_response_only_validation_thresholds.csv  reflection_full_validation_thresholds.csv  reflection_raw_confidence_validation_thresholds.csv  review_counterfactual.csv  test_summary.csv  (+1 more)
scripts/: aggregate_replications.py  build_manifest.py  build_v3_data.py  build_v5_data.py  probe_models.py  run_ablations.py  run_study.py  run_v3_ablations.py  run_v3_study.py  run_v5_phase1.py  run_v5_phase2.py
tests/: test_core.py  test_features_and_routing.py  test_normalization.py  test_provider_review.py  test_scoring_and_metrics.py  test_v5_protocol.py  test_verifiers.py
(+80 files in other folders)
